srcs/ftps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ftps
  labels:
    app: ftps
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ftps
  replicas: 1
  template:
    metadata:
      labels:
        app: ftps
    spec:
      restartPolicy: Always
      containers:
      - name: ftps
        image: ftps
        imagePullPolicy: Never
        ports:
        - containerPort: 21
          hostPort: 21
        - containerPort: 30001
          hostPort: 30001
        volumeMounts:
        - mountPath: /home/ftpusers
          name: ftps-persistant-storage
      volumes:
      - name: ftps-persistant-storage
        persistentVolumeClaim:
          claimName: ftps-pv-claim
