srcs/wordpress.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
spec:
  ports:
    - port: 80
      targetPort: 80
      nodePort: 5050
  selector:
    app: wordpress
  type: NodePort
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - image: wordpress
        imagePullPolicy: Never
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
